Notebook related chagnes.

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix_styles.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix_styles.scss
@@ -43,7 +43,7 @@ body>footer {
 
 #top-headers {
 
-  padding-bottom: 0em;
+  margin-bottom: 0em;
 
   #first-header.top-bar {
 
@@ -58,7 +58,7 @@ body>footer {
     }
 
     .title-area {
-      height: 4em;
+      height: auto;
 
       img {
         height: 45px;
