--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/analytics_views.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/analytics_views.html
@@ -1,7 +1,7 @@
 
 <small>
 	<label class="lbl_tag tag_ele">
-		<a class="visits_count visits_info" title="Click to see no. of views">Click to see No. of Views</a>
+		<a class="visits_count visits_info" title="Show no. of views" style="color: #8F86BB">Show no. of views</a>
 	</label>
 </small>
 
