--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/base.html
@@ -125,7 +125,7 @@
 
           <!-- Start of content section -->
           <!-- <article class="medium-10 columns"> -->
-          <article class="medium{% firstof first_body_column|default_if_none:'2'|safe|add:'-12' %} columns">
+          <article class="medium{% firstof first_body_column|default_if_none:'2'|safe|add:'-12' %} columns" style="padding: 0px;">
             <!-- The actual body content -->
             <!-- Url redirection -->
 
