pointer cursor to caption of image

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ImageDashboard.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ImageDashboard.html
@@ -147,7 +147,7 @@
               "{% else %}"
               data-image-src="{{MEDIA_URL}}{{each.if_file.mid.relurl}}"
               "{% endif %}">
-            <figcaption>{{each.name}}</figcaption>
+            <figcaption style="cursor:pointer">{{each.name}}</figcaption>
     
     </li>
     {% endfor %}
